Merge user-story-7