@@ -1,8 +1,8 @@
 package com.csv.communitytrackerjava.service;
 
-import com.csv.communitytrackerjava.dto.ProjectDTO;
 import com.csv.communitytrackerjava.dto.ProjectPayloadDTO;
 import com.csv.communitytrackerjava.dto.ProjectResponseDTO;
+import com.csv.communitytrackerjava.dto.ProjectValidationDTO;
 import com.csv.communitytrackerjava.exception.RecordNotFoundException;
 import com.csv.communitytrackerjava.mapper.ProjectMapper;
 import com.csv.communitytrackerjava.model.Project;
@@ -14,6 +14,7 @@ import org.springframework.validation.ObjectError;
 
 import javax.persistence.EntityExistsException;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 @Service
@@ -30,8 +31,19 @@ public class ProjectServiceImpl implements ProjectService{
     
 
     @Override
-    public Project saveProject(Project project) {
-        return projectRepository.save(project);
+    public ProjectResponseDTO saveProject(ProjectValidationDTO projectValidationDTO) {
+        String projectDesc = projectValidationDTO.getProjectDesc();
+        projectValidationDTO.setProjectDesc(CaseUtils.toCamelCase(projectDesc, true, ' '));
+
+        Project project = projectMapper.validationToModel(projectValidationDTO);
+        project = projectRepository.save(project);
+
+        projectResponseDTO.setErrors(List.of(new ObjectError("test", "test")));
+        projectResponseDTO.setMessage("Successfully add project.");
+        payloadDTO.setAdditionalProperty("projects", projectMapper.toDTO(project));
+        projectResponseDTO.setPayload(payloadDTO);
+
+        return projectResponseDTO;
     }
 
     @Override
@@ -48,7 +60,7 @@ public class ProjectServiceImpl implements ProjectService{
             throw new EntityExistsException("Code already existing");
         }
 
-        projectResponseDTO.setErrors(Arrays.asList(new ObjectError("test", "test")));
+        projectResponseDTO.setErrors(List.of(new ObjectError("test", "test")));
         projectResponseDTO.setMessage("Successfully fetch all projects.");
         payloadDTO.setAdditionalProperty("projects", projectMapper.toDTO(projectFound));
         projectResponseDTO.setPayload(payloadDTO);
@@ -60,7 +72,7 @@ public class ProjectServiceImpl implements ProjectService{
     @Override
     public ProjectResponseDTO findAllProject() {
 
-        projectResponseDTO.setErrors(Arrays.asList(new ObjectError("test", "test")));
+        projectResponseDTO.setErrors(List.of(new ObjectError("test", "test")));
         projectResponseDTO.setMessage("Successfully fetch all projects.");
         payloadDTO.setAdditionalProperty("projects", projectMapper.toListDTO(projectRepository.findAll()));
         projectResponseDTO.setPayload(payloadDTO);
